# RGB_DENSE_MAPPING

UniMVSNet/: CMakeLists.txt  main.py  model.py  package.xml
UniMVSNet/msg/: bgr_frameMSG.msg
UniMVSNet/scripts/: dtu_test.sh  unimvsnet_node.py
dso/src/FullSystem/: FullSystem.cpp  FullSystem.h  HessianBlocks.h
dso/src/util/: FrameShell.h
dso_ros/: CMakeLists.txt  camera.txt  euroc_cam0.txt  package.xml
dso_ros/include/: pointcloudmapping.cpp  pointcloudmapping.h
dso_ros/launch/: dso_live.launch
dso_ros/msg/: DepthMsg.msg  poseMSG.msg
dso_ros/src/: filter.cpp  main.cpp  mapping_node.cpp
